postgresql-common (17) unstable; urgency=low

  *

 -- Martin Pitt <mpitt@debian.org>  Thu, 16 Jun 2005 10:24:34 +0200

postgresql-common (16) unstable; urgency=low

  * pg_createcluster: Add --logfile parameter.
  * pg_wrapper(1): Clarify synopsis.
  * debian/rules: Deuglify manpages by building them with --quotes=none.
  * debian/maintscripts-functions: Do not create a default "main" cluster when
    upgrading a server package.
  * pg_upgradecluster: Handle more configuration parameter transitions:
    - syslog -> log_destination
    - log_statement: false/true -> none/all
    - log_{pid,timestamp,hostname,source_port} -> log_line_prefix
    - obsolete max_expr_depth
  * pg_upgradecluster: Use new replace_conf_value() function which
    produces nicer configuration files with transitioned parameters.
  * Add test 120_obsolete_confparams: Upgrade a 7.4 cluster with all
    possible 7.4 options enabled.
  * PgCommon.pm: Fix parsing of autovacuum parameters.
  * pg_ctlcluster: Respect the avac_debug autovacuum configuration option.
  * pg_createcluster: Since the new default socket directory is
    /var/run/postgresql, explicitly set /tmp as socket directory for clusters
    if /var/run/postgresql is not writable by the cluster owner.
  * PgCommon.pm, get_cluster_socketdir(): If unix_socket_directory is not
    specified explicitly in postgresql.conf, default to /var/run/postgresql
    for postgres-owned clusters. Closes: #313651
  * pg_ctlcluster: Do not sleep at all after starting the postmaster if we
    don't run the autovacuum daemon; sleep for a full second if we do.

 -- Martin Pitt <mpitt@debian.org>  Wed, 15 Jun 2005 01:01:11 +0200

postgresql-common (15) unstable; urgency=low

  * First unstable upload, welcome to the PostgreSQL future.
  * Quiet maintenance:
    - pg_maintenance: Supply -q to vacuumdb unless in verbose mode.
    - postgresql-common.cron.d: Direct stdout to /dev/null.
    - Adapted tests/060_maintenance expected output.