@@ -2,8 +2,6 @@ postgresql TODO
 ===============
 
 Bugs:
-- PgCommon.pm: never ask for a password when checking if a cluster
-  runs
 
 Transition bugs:
 - Continue to use the old log file.
